--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "reactwarriors-form-task",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5",
-    "typeface-roboto": "0.0.54"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
